--- a/style.css
+++ b/style.css
@@ -1,67 +1,154 @@
-.main{
-    width: 400px;
-    border: 1px solid;
-    margin: auto;
+#body{
+    width: 100%;
+    height: 100%;
+    padding:50px 0px;
 }
 
-.main >div {
+.main{
+    width: 320px;
+    height: 600px;
+    margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: #03494e;
+    border-radius: 15px;
+   
+}
 
+#headButt{
+    border: 1px solid white;
+    background-color: #076e7a;
+    width: 100%;
+    height: 65px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: aliceblue;
+    text-align: center;
+    grid-gap: 35px;
+}
+
+#headButt , #footButt{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+#alpha{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 2fr 1fr;
+    color: aliceblue;
+    text-align: center;
+    grid-gap: 35px; 
+    padding: 8px; 
+}
+
+#tilesLeft, #score, #counter{
+    margin:0px
+}
+#counter{
+    font-size: 40px;
+}
+
+#alpha{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(4,90px);
+    grid-gap: 13px;
+    width: 95%;
+    height: 380px;
+    margin: auto;
+}
+#footer{
+    color: rgb(190, 190, 190);
+    text-align: center;
+    font-weight: 100;
+    font-size: 18px;
+    padding: 0px 5px;
+    display:none;
+}
+#tilesLeft{
+    width: 70px;
+    line-height: 0em;
+    text-align: center;
+}
+#result{
+    overflow: scroll;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+
+.spectile{
+    background-color: white;
+    width: 100%;
+    height: 4px;
+    border-radius: 5px;
+    margin-top: 2px;
+    padding: 0px 2px;
+}
+#alpha div{
+    width: 100%;
+    text-align: center;
+}
+.nameDiv{
+    border-radius: 7px;
+    background-color: white;
+    display: flex;
+    cursor: pointer;
+    padding: 1px;
+    position: relative;
+    color: #043e44
+}
+.nameDiv:hover{
+    background-color: rgb(213, 221, 235);
+    margin-bottom: 5px;
+    color: #076e7a;
+}
+.digit{
+    border-radius: 7px;
+    width: 80%;
+    height: 80%;
+    border: 1px dotted black;
     margin: auto;
     padding: 5px;
+    font-size: 30px;
+    
 }
-.div1{
-    display: flex;
-    background-color:rgb(8,108,119);
-    color: whitesmoke;
-    justify-content: space-around;
-    padding: 10px;
+.scoreDigit{
+    position: absolute;
+    top: 15px;
+    right: 7px;
+    font-size: 14px;
+    color: crimson
 }
-
-.div2{
-    display: grid;
-    grid-template-columns: repeat(5, 80px);
-    background-color: rgb(6,87,93);
+.powerDigit{
+    position: absolute;
+        top: -8px;
+        left: 2px;
+        font-size: 10px;
+        color: white;
 }
-
-.alpha{
-    font-size: large;
-  
+#delete, #submit{
+    cursor: pointer;
+    display: none;
 }
-.num{
-    font-size: x-small;
-    width: 10%;
-    margin-left: 80%;
-}
-
-.sp{
-    font-size: x-small;
-    width: 10%;
-    margin-right: 90%;
-}
-  
-.div2 > button{
-    margin: 10px;
-    border: 1px dotted;
-    padding: 15px;
-}
-
-
-
-.div3{
-    background-color: rgb(8,108,119);
-    justify-content: space-evenly;
+#redirect {
+    background-image: linear-gradient(to right,
+            #066e7a,
+            #03494e);
+    padding: 5px 80px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
     color: white;
 }
 
-button{
-    margin: auto;
-}
-
-
-
-.displaydata{
-    color: aliceblue;
-    width: 97.5%;
-    height: 35px;
-    background-color: rgb(8,108,119);
+#redirect:hover {
+    background-image: linear-gradient(to right,
+            #03494e,
+            #066e7a)
 }
